<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ride.RideFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_time"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_speed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cadenceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/ride_cadence"
            android:textSize="20sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/frontGearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/front_gear"
                android:textSize="20sp" />

            <Button
                android:id="@+id/frontGearUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_plus"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/frontGearDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_minues" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/rearGearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/rear_gear"
                android:textSize="20sp" />
            <Button
                android:id="@+id/rearGearUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rear_plus" />

            <Button
                android:id="@+id/rearGearDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rear_minus"
                android:layout_marginStart="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_start"
                android:layout_marginEnd="16dp" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_stop"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
