<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cc.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ride"
        android:name="com.example.cc.ui.ride.RideFragment"
        android:label="@string/title_ride"
        tools:layout="@layout/fragment_ride" />

    <fragment
        android:id="@+id/rideHistoryFragment"
        android:name="com.example.cc.ui.ride_history.RideHistoryFragment"
        android:label="@string/title_ride_history"
        tools:layout="@layout/fragment_ride_history">
    </fragment>

</navigation>
